Make header fixed. Remove scrollbars

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -21,7 +21,8 @@
   grid-auto-flow: column;
   align-items: center;
   grid-gap: 25px;
-  position: sticky;
+  position: fixed;
+  width: 100vw;
   padding: 25px 20.5px 25px 25px;
   top: 0%;
   background-color: var(--default-black);
