--- a/app/src/index.css
+++ b/app/src/index.css
@@ -26,8 +26,14 @@ body {
   color: var(--default-white);
 }
 
-body::-webkit-scrollbar {
+
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
   display: none;
+}
+
+body, html {
+  overscroll-behavior: none;
 }
 
 h1 {
